# website

./: .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml  website.drawio
content/: hii.md
content/error/: default
public/: start
public/content/: index  suck
public/content/articles/: homelabsetup.md  jsblog  secureaserver.md  serversec  test
public/content/projects/: bash-visual-traceroute  bash-visual-traceroute.md  hithere
public/content/recipes/: bananaBread.md  brownies.md  dandan.md
server/: Cargo.toml
server/src/: main.rs
src/: main.rs
templates/: 404.html.tera  base.html.tera  content-dir.html.tera  nav.html.tera  style.css.tera
templates/error/: 404.html.tera
