[package]
name = "website"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

	
[dependencies]
markdown = "0.3.0"
rocket = "0.5.0-rc.1"
serde = "1.0.136"
chrono = "0.4.19"

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.1"
features = ["tera"]
